--- a/.github/workflows/java-ci.yml
+++ b/.github/workflows/java-ci.yml
@@ -17,9 +17,13 @@ jobs:
         with:
           distribution: 'temurin'
           java-version: '21'
+      - name: JavaFX herunterladen
+        run: |
+          wget https://download2.gluonhq.com/openjfx/21.0.2/openjfx-21.0.2_linux-x64_bin-sdk.zip
+          unzip openjfx-21.0.2_linux-x64_bin-sdk.zip
       - name: Kompilieren
         run: |
-          javac -d bin src/module-info.java src/com/barpos/*.java
+          javac --module-path openjfx-21.0.2_linux-x64_bin-sdk/javafx-sdk-21.0.2/lib --add-modules javafx.controls,javafx.fxml -d bin src/module-info.java src/com/barpos/*.java
       - name: JAR erstellen
         run: |
           jar cfm BarPOSSystem.jar manifest.txt -C bin .
